# carshare_bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-inference.txt  requirements-ml.txt  requirements.txt
airflow/dags/: dataset_ingestion.py  dataset_validation.py  evaluate_models.py  generate_eval_report.py  register_best_model.py  train_damage_seg_model.py  train_quality_view_model.py
apps/admin-panel/: index.html  package-lock.json  package.json  vite.config.ts
apps/api_service/: alembic.ini
apps/miniapp-frontend/: index.html  package-lock.json  package.json  vite.config.ts
docs/: known-limitations.md
docs/api/: api.md
docs/data/: data.md  (+1 more)
notebooks/: 01_cardd_to_yolo_full_baseline_v2.ipynb  01_cardd_to_yolo_only_v2.ipynb  01_dataset_download_fixed_v7.ipynb  02_train_quality_view_v2.ipynb  02_train_quality_view_v3.ipynb  03_train_damage_segmentation_full_baseline_mps.ipynb  03_train_damage_segmentation_v2.ipynb  03_train_damage_segmentation_v2_positive_sampler.ipynb  04_evaluate_pipeline_v2.ipynb  05_quick_damage_seg_inference_external.ipynb  06_kaggle_train_damage_seg_yolo11n.ipynb
scripts/: create_buckets.py  generate_readme_mockups.py  local_edge_proxy.py  seed_demo_data.py
tests/: test_admin_cases_route.py  test_api_smoke.py  test_bot_message_flow.py  test_bot_state.py  test_bot_trip_flow.py  test_comparison_logic.py  test_e2e_smoke_flow.py  test_enums.py  test_inference_client.py  test_inference_service.py  test_inspection_service.py  test_local_edge_proxy.py  test_ml_utils.py  test_rental_service.py
(+125 files in other folders)
