[project]
name = "car-inspection-assistant"
version = "0.1.0"
description = "Telegram-based car inspection assistant demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.18",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.4",
  "celery>=5.4.0",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "opencv-python-headless>=4.10.0.84",
  "numpy>=1.26.4",
  "pillow>=10.3.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "aiogram>=3.7.0",
  "pyyaml>=6.0.1",
  "orjson>=3.10.0",
  "pytest>=8.2.0",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "timm>=1.0.25",
  "ultralytics>=8.4.23",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
